--- a/src/main/resources/templates/editMesLivres.html
+++ b/src/main/resources/templates/editMesLivres.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Livre Details</title>
+    <title>Edit Livre</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,24 +14,33 @@
 <nav class="p-3">
     <nav class="container">
         <div class="card">
-            <form method="post" th:action="@{/saveMesLivres}">
-                <input type="hidden" name="exposant.exposantId" th:value="${livre.exposant.exposantId}" />
+            <form method="post" th:action="@{saveMesLivres}">
                 <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
                         <h4 class="card-title mt-3 text-center">
-                            Ajouter un livre :
+                            Editer un livre :
                         </h4>
-                        <a th:href="@{/dashboard}" class="btn btn-outline-primary ml-auto">
-                            <i class="fa fa-arrow-left" aria-hidden="true"></i> Dashboard
+                        <a th:href="@{'/mesLivres/' + ${#authentication.principal.userId}}" class="btn btn-outline-primary ml-auto">
+                            <i class="fa fa-arrow-left" aria-hidden="true"></i> Liste des livres
                         </a>
                     </div>
 
-                    <i>Titre : (*) Ce champ est obligatoire</i> <span class="text-danger" th:errors="${livre.titre}"></span>
+                    <i>ID :</i>
+                    <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                        </div>
+                        <input id="id" class="form-control" type="hidden" name="livreId" th:value="${livre.livreId}">
+                        <input class="form-control" type="text" value="" th:value="${livre.livreId}" readonly>
+                    </div>
+
+
+                    <i>Titre : (*) Ce champ ne doit pas être vide</i> <span class="text-danger" th:errors="${livre.titre}"></span>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-building"></i> </span>
                         </div>
-                        <input class="form-control" type="text" name="titre" th:value="${livre.titre}">
+                        <input id="titre" class="form-control" type="text" name="titre" th:value="${livre.titre}">
                     </div>
 
                     <i>Auteur :</i>
@@ -39,7 +48,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-map"></i> </span>
                         </div>
-                        <input class="form-control" type="text" name="auteur" th:value="${livre.auteur}">
+                        <input id="auteur" class="form-control" type="text" name="auteur" th:value="${livre.auteur}">
                         <span class="text-danger" th:errors="${livre.auteur}"></span>
                     </div>
 
@@ -48,7 +57,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
                         </div>
-                        <input class="form-control" type="text" name="editeur" th:value="${livre.editeur}">
+                        <input id="editeur" class="form-control" type="text" name="editeur" th:value="${livre.editeur}">
                         <span class="text-danger" th:errors="${livre.editeur}"></span>
                     </div>
 
@@ -57,49 +66,46 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-phone"></i> </span>
                         </div>
-                        <input class="form-control" type="date" name="dateEdition" th:value="${livre.dateEdition}">
+                        <input id="dateEdition"  class="form-control" type="date" name="dateEdition" th:value="${livre.dateEdition}">
                         <span class="text-danger" th:errors="${livre.dateEdition}"></span>
                     </div>
-
 
                     <i>Prix :</i>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"> <i class="fa fa-home"></i> </span>
+                            <span class="input-group-text"> <i class="fa fa-globe"></i> </span>
                         </div>
-                        <input class="form-control" type="number" name="prix" th:value="${livre.prix}">
+                        <input id="prix"  class="form-control" type="number" name="prix" th:value="${livre.prix}">
                         <span class="text-danger" th:errors="${livre.prix}"></span>
                     </div>
 
                     <i>Isbn :</i>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"> <i class="fa fa-street-view" aria-hidden="true"></i> </span>
+                            <span class="input-group-text"> <i class="fa fa-home"></i> </span>
                         </div>
-                        <input class="form-control" type="text" name="isbn" th:value="${livre.isbn}">
+                        <input  id="isbn" class="form-control" type="text" name="isbn" th:value="${livre.isbn}">
                         <span class="text-danger" th:errors="${livre.isbn}"></span>
                     </div>
 
-                    <i>Exposant : </i>
-                    <div class="form-group input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
-                        </div>
-                        <input id="exposant" class="form-control" type="text" name="exposant.exposantId" th:value="${livre.exposant?.exposantId}" readonly>
-                    </div>
 
-                    <!-- ... Other form fields ... -->
+
+                        <input  id="exposant.exposantId" class="form-control" type="text" name="exposant.exposantId" th:value="${livre.exposant.exposantId}" hidden>
+                        <span class="text-danger" th:errors="${livre.exposant.exposantId}"></span>
 
                     <div class="d-flex justify-content-center align-items-center">
                         <button id="saveButton" class="btn btn-outline-success" type="submit" disabled>
-                            Save
+                            Update
                         </button>
                     </div>
 
                     <script>
-                        // Enable the "Save" button when the "Exposant" and "Titre" fields have valid values
+                        // Enable the "Save" button when the "Titre" field has valid value
                         const titreInput = document.querySelector('[name="titre"]');
                         const saveButton = document.getElementById('saveButton');
+
+                        // Check the input value initially and disable/enable the button accordingly
+                        toggleSaveButtonState();
 
                         titreInput.addEventListener('input', toggleSaveButtonState);
 
