--- a/src/main/resources/templates/mesLivresdetails.html
+++ b/src/main/resources/templates/mesLivresdetails.html
@@ -17,18 +17,11 @@
                     <h4 class="card-title mt-3 text-center">
                         LivreDetails :
                     </h4>
-                    <a th:href="@{/listLivres}" class="btn btn-outline-primary ml-auto">
+                    <a th:href="@{'/mesLivres/' + ${#authentication.principal.userId}}" class="btn btn-outline-primary ml-auto">
                         <i class="fa fa-arrow-left" aria-hidden="true"></i> Liste des livres
                     </a>
                 </div>
 
-                <i>ID :</i>
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-building"></i> </span>
-                    </div>
-                    <span class="form-control" th:text="${livre.livreId}"></span>
-                </div>
 
                 <i>Titre :</i>
                 <div class="form-group input-group">
@@ -44,8 +37,10 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
                     </div>
-                    <span class="form-control" th:if="${livre.auteur == null or livre.auteur == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.auteur != null and livre.auteur != ''}" th:text="${livre.auteur}"></span>
+                    <span class="form-control" th:if="${livre.auteur == null or livre.auteur == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${livre.auteur != null and livre.auteur != ''}"
+                          th:text="${livre.auteur}"></span>
                 </div>
 
                 <i>Editeur :</i>
@@ -53,8 +48,10 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
                     </div>
-                    <span class="form-control" th:if="${livre.editeur == null or livre.editeur == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.editeur != null and livre.editeur != ''}" th:text="${livre.editeur}"></span>
+                    <span class="form-control" th:if="${livre.editeur == null or livre.editeur == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${livre.editeur != null and livre.editeur != ''}"
+                          th:text="${livre.editeur}"></span>
                 </div>
 
                 <i>Date edition :</i>
@@ -62,8 +59,10 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
                     </div>
-                    <span class="form-control" th:if="${livre.dateEdition == null or livre.dateEdition == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.dateEdition != null and livre.dateEdition != ''}" th:text="${livre.dateEdition}"></span>
+                    <span class="form-control" th:if="${livre.dateEdition == null or livre.dateEdition == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${livre.dateEdition != null and livre.dateEdition != ''}"
+                          th:text="${livre.dateEdition}"></span>
                 </div>
 
                 <i>Prix :</i>
@@ -71,8 +70,10 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
                     </div>
-                    <span class="form-control" th:if="${livre.prix == null or livre.prix == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.prix != null and livre.prix != ''}" th:text="${livre.prix}"></span>
+                    <span class="form-control" th:if="${livre.prix == null or livre.prix == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${livre.prix != null and livre.prix != ''}"
+                          th:text="${livre.prix}"></span>
                 </div>
 
                 <i>Isbn :</i>
@@ -80,19 +81,11 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
                     </div>
-                    <span class="form-control" th:if="${livre.isbn == null or livre.isbn == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.isbn != null and livre.isbn != ''}" th:text="${livre.isbn}"></span>
+                    <span class="form-control" th:if="${livre.isbn == null or livre.isbn == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${livre.isbn != null and livre.isbn != ''}"
+                          th:text="${livre.isbn}"></span>
                 </div>
-
-                <i>Exposant :</i>
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-street-view" aria-hidden="true"></i> </span>
-                    </div>
-                    <span class="form-control" th:unless="${livre.exposant.user.username}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.exposant.user.username}" th:text="${livre.exposant.user.username}"></span>
-                </div>
-
             </div>
         </div>
     </nav>
